# ZebraLogicBench

./: .gitignore  assert_equal.ipynb  combine_json.ipynb  main.py  pyproject.toml  zero_eval_local.sh
result_dirs/: zebra-grid.summary.json  zebra-grid.summary.md
scripts/: ZebraLogic_log.md
src/: _TEMPLATES.py  task_configs.py  unified_infer.py
src/evaluation/: eval_utils.py  zebra_grid_eval.py
src/templates/: ZEBRA_GRID.py
